All the categories and Images are updated

--- a/HTML/Category1.html
+++ b/HTML/Category1.html
@@ -41,11 +41,11 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="Category1.html">Insurance</a>
                             <a class="dropdown-item" href="Category2.html">Financial Support</a>
-                            <a class="dropdown-item" href="Category3.html">Crop Field</a>
+                            <!-- <a class="dropdown-item" href="Category3.html">Crop Field</a> -->
                                 <a class="dropdown-item" href="Category4.html">Sustainable Dev</a>
                             </div>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link pt-3" href="MSP.html">MSP</a>
                         </li>
                         <li class="nav-item">
@@ -53,7 +53,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link pt-3" href="LoanCalculator.html">Loan-Calc</a>
-                        </li>
+                        </li> -->
                     </ul>
                 <button type="button" class="btn btn-outline-primary mx-1">Log In</button>
                 <button type="button" class="btn btn-outline-secondary mx-1">Register</button>
@@ -67,33 +67,33 @@
                 <h2>Insurance Schemes </h2>
                 <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">Pradhan Mantri Fasal Bima Yojana (PMFBY)</h5>
-                        <p class="card-text">Provides comprehensive insurance cover against failure of the crop thus helping in stabilising the income of the farmers.</p>
-                        <a href="Scheme/insurance_1.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title"> ಆಯುಷ್ಮಾನ್ ಭಾರತ್ – ಪ್ರಧಾನ ಮಂತ್ರಿ ಜನ ಆರೋಗ್ಯ ಯೋಜನೆ (PM-JAY)</h5>
+                        <p class="card-text">ಈ ಯೋಜನೆ ದೇಶದ ಬಡ ಮತ್ತು ದುರ್ಬಲ ಕುಟುಂಬಗಳಿಗೆ ವಾರ್ಷಿಕವಾಗಿ ₹5 ಲಕ್ಷಗಳವರೆಗೆ ಉಚಿತ ದ್ವಿತೀಯ ಮತ್ತು ತೃತೀಯ ಹಂತದ ಆಸ್ಪತ್ರೆ ಚಿಕಿತ್ಸೆಯನ್ನು ಒದಗಿಸುತ್ತದೆ.</p>
+                        <a href="https://www.godigit.com/kn-in/health-insurance/government-health-insurance-schemes">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
                <br>
                <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">Prime Minister Jeevan Jyoti Bima Yojana</h5>
-                        <p class="card-text">Life Insurance scheme with risk coverage of Rs. 2 Lakh in case of death of the insured, due to any reason.</p>
-                        <a href="Scheme/insurance_2.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title"> ಪ್ರಧಾನ ಮಂತ್ರಿ ಸ್ವಾಸ್ಥ್ಯ ಸುರಕ್ಷಾ ನಿಧಿ (PMSSN)</h5>
+                        <p class="card-text">ಆರೋಗ್ಯ ಮತ್ತು ಶಿಕ್ಷಣ ಉಪಕರದಿಂದ ಸಂಗ್ರಹಿಸಲಾದ ನಿಧಿಯನ್ನು ಆರೋಗ್ಯ ಉದ್ದೇಶಗಳಿಗೆ ಬಳಸಲು ಈ ಕಾಲಮಿತಿಯಿಲ್ಲದ ಮೀಸಲು ನಿಧಿಯನ್ನು ಸ್ಥಾಪಿಸಲಾಗಿದೆ</p>
+                        <a href="https://www.pmindia.gov.in/kn/news_updates/%E0%B2%86%E0%B2%B0%E0%B3%8B%E0%B2%97%E0%B3%8D%E0%B2%AF-%E0%B2%AE%E0%B2%A4%E0%B3%8D%E0%B2%A4%E0%B3%81-%E0%B2%B6%E0%B2%BF%E0%B2%95%E0%B3%8D%E0%B2%B7%E0%B2%A3-%E0%B2%89%E0%B2%AA%E0%B2%95%E0%B2%B0/">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
                <br>
                <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">Pradhan Mantri Suraksha Bima Yojana</h5>
-                        <p class="card-text">An accident Insurance scheme, PMSBY offers a one-year accidental death and disability cover, which can be renewed annually.</p>
-                        <a href="Scheme/insurance_3.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title">ರಾಷ್ಟ್ರೀಯ ಸ್ವಾಸ್ಥ್ಯ ಬಿಮಾ ಯೋಜನೆ (RSBY) </h5>
+                        <p class="card-text">ಬಡತನ ರೇಖೆಗಿಂತ ಕೆಳಗಿನ ಕುಟುಂಬಗಳಿಗೆ (BPL) ಈ ಯೋಜನೆ ವಾರ್ಷಿಕವಾಗಿ ₹30,000 ವರೆಗೆ ಆಸ್ಪತ್ರೆ ಚಿಕಿತ್ಸಾ ವೆಚ್ಚವನ್ನು ಕವರೇಜ್ ಮಾಡುತ್ತದೆ</p>
+                        <a href="https://www.godigit.com/kn-in/health-insurance/government-health-insurance-schemes">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
                <br>
                <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">Livestock insurance Scheme</h5>
-                        <p class="card-text">Provides protection mechanism to the farmers against any eventual loss of their animals due to death.</p>
-                        <a href="Scheme/insurance_4.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title">ಕೇಂದ್ರ ಸರ್ಕಾರದ ಆರೋಗ್ಯ ಯೋಜನೆ (CGHS)</h5>
+                        <p class="card-text">ಕೇಂದ್ರ ಸರ್ಕಾರಿ ನೌಕರರು ಮತ್ತು ಪಿಂಚಣಿದಾರರಿಗೆ ಈ ಯೋಜನೆ ಅಲ್ಪ ವೆಚ್ಚದಲ್ಲಿ ಸಮಗ್ರ ಆರೋಗ್ಯ ಸೇವೆಗಳನ್ನು ಒದಗಿಸುತ್ತದೆ..</p>
+                        <a href="https://kannada.oneindia.com/news/karnataka/fifth-state-finance-commission-set-up-by-government-of-karnataka-know-details-321077.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
                 <br>
