--- a/HTML/Category2.html
+++ b/HTML/Category2.html
@@ -41,11 +41,11 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="Category1.html">Insurance</a>
                             <a class="dropdown-item" href="Category2.html">Financial Support</a>
-                            <a class="dropdown-item" href="Category3.html">Crop Field</a>
+                            <!-- <a class="dropdown-item" href="Category3.html">Crop Field</a> -->
                                 <a class="dropdown-item" href="Category4.html">Sustainable Dev</a>
                             </div>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link pt-3" href="MSP.html">MSP</a>
                         </li>
                         <li class="nav-item">
@@ -53,7 +53,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link pt-3" href="LoanCalculator.html">Loan-Calc</a>
-                        </li>
+                        </li> -->
                     </ul>
                 <button type="button" class="btn btn-outline-primary mx-1">Log In</button>
                 <button type="button" class="btn btn-outline-secondary mx-1">Register</button>
@@ -64,44 +64,38 @@
                 <h2>Financial Support Schemes</h2>
                 <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">PM-Kisan Samman Nidhi Yojana</h5>
-                        <p class="card-text">Farmers with less than two hectares of landholding will get up to Rs. 6,000 per year as a minimum income support.</p>
-                        <a href="Scheme/finance_1.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title">ಪ್ರಧಾನಮಂತ್ರಿ ಸ್ವಾಸ್ಥ್ಯ ಸುರಕ್ಷಾ ಯೋಜನೆ (PMSSY):</h5>
+                        <p class="card-text">ಈ ಯೋಜನೆ ದೇಶದ ವಿವಿಧ ಭಾಗಗಳಲ್ಲಿ ಉತ್ತಮ ವೈದ್ಯಕೀಯ ಶಿಕ್ಷಣ ಮತ್ತು ಆರೋಗ್ಯ ಸೇವೆಗಳನ್ನು ಒದಗಿಸಲು ಉದ್ದೇಶಿಸಲಾಗಿದೆ.</p>
+                        <a href="https://www.godigit.com/kn-in/health-insurance/government-health-insurance-schemes">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
                <br>
                <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">Pradhan Mantri Kisan Maandhan Yojana(PMKMY) </h5>
-                        <p class="card-text">Marginalised farmers will get a minimum pension of Rs 3000 / month on attaining the age of 60 years.</p>
-                        <a href="Scheme/finance_2.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title">ಜನ ಔಷಧಿ ಯೋಜನೆ </h5>
+                        <p class="card-text">ಕೈಗೆಟುಕುವ ಬೆಲೆಯ ಜನರಿಕ್ ಔಷಧಿಗಳನ್ನು ಒದಗಿಸಲು ಈ ಯೋಜನೆ ಪ್ರಾರಂಭಿಸಲಾಗಿದೆ.</p>
+                        <p class="card-text">  ರಾಷ್ಟ್ರವ್ಯಾಪಿ ಜನ ಔಷಧಿ ಕೇಂದ್ರಗಳ ಮೂಲಕ ಕಡಿಮೆ ದರದ ಔಷಧಿಗಳನ್ನು ಸಾರ್ವಜನಿಕರಿಗೆ ಲಭ್ಯ ಮಾಡಿಸಲಾಗುತ್ತದೆ. </p>
+                        <a href="https://pib.gov.in/PressReleasePage.aspx?PRID=2098137">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
                <br>
                <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">Pradhan Mantri Kisan Pension Yojana</h5>
-                        <p class="card-text">Under this, A farmer will have to contribute Rs 55 per month and the Central Government will make an equal contribution and he will get a pension of Rs 3000 per month after the age of 60.</p>
-                        <a href="Scheme/finance_3.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title">ಆಯುಷ್ಮಾನ್ ಸಹಕಾರ್ ಯೋಜನೆ</h5>
+                        <p class="card-text">ರಾಷ್ಟ್ರೀಯ ಸಹಕಾರಿ ಅಭಿವೃದ್ಧಿ ನಿಗಮ (NCDC) ಈ ಯೋಜನೆಯನ್ನು ಸಹಕಾರಿ ಸಂಸ್ಥೆಗಳ ಮೂಲಕ ಆರೋಗ್ಯ ಮೂಲಸೌಕರ್ಯ ಅಭಿವೃದ್ಧಿಗೆ ಹಣಕಾಸಿನ ನೆರವು ನೀಡಲು ಪ್ರಾರಂಭಿಸಿದೆ.​</p>
+                        <p class="card-text">ಈ ಯೋಜನೆ ಅಡಿಯಲ್ಲಿ ಆಸ್ಪತ್ರೆಗಳು, ಆರೋಗ್ಯ ಶಿಕ್ಷಣ ಸಂಸ್ಥೆಗಳು ಮತ್ತು ಸಂಬಂಧಿತ ಸೇವೆಗಳ ಸ್ಥಾಪನೆಗೆ ಸಹಾಯ ಮಾಡಲಾಗುತ್ತದೆ.​</p>
+                         <a href="https://www.godigit.com/kn-in/health-insurance/government-health-insurance-schemes">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
                <br>
                <div class="card ">
                     <div class="card-body">
-                        <h5 class="card-title">Jan Dhan Yojana</h5>
-                        <p class="card-text"> This scheme ensures access to financial services, namely, a basic savings & deposit accounts, remittance, credit, insurance, pension in an affordable manner.</p>
-                        <a href="Scheme/finance_4.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
+                        <h5 class="card-title">ಬ್ಯಾಂಕ್ ಆಫ್ ಇಂಡಿಯಾ ಆರೋಗ್ಯ ರಕ್ಷಣೆ ಯೋಜನೆಗಳು</h5>
+                        <p class="card-text"> ಬ್ಯಾಂಕ್ ಆಫ್ ಇಂಡಿಯಾ ವಿವಿಧ ಆರೋಗ್ಯ ರಕ್ಷಣೆ ಯೋಜನೆಗಳನ್ನು ಕಡಿಮೆ ಬಡ್ಡಿ ದರಗಳಲ್ಲಿ ಮತ್ತು ಯಾವುದೇ ಗುಪ್ತ ಶುಲ್ಕಗಳಿಲ್ಲದೆ ಒದಗಿಸುತ್ತದೆ.​</p>
+                        <p class="card-text"> ಈ ಯೋಜನೆಗಳು ವೈದ್ಯಕೀಯ ವೆಚ್ಚಗಳನ್ನು ನಿರ್ವಹಿಸಲು ಆರ್ಥಿಕ ನೆರವನ್ನು ನೀಡುತ್ತವೆ.​</p>
+                        <a href="https://bankofindia.co.in/kn/healthcare-schemes">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
                     </div>
                 </div>
-                <br>
-                <div class="card ">
-                    <div class="card-body">
-                        <h5 class="card-title">National Agriculture Market (e-NAM)</h5>
-                        <p class="card-text"> eNAM is a pan-India electronic trading portal which networks the existing APMC mandis to create a unified national market for agricultural commodities.</p>
-                        <a href="Scheme/finance_5.html">Read More <i class="arrow right"></i><i class="arrow right"></i></a>
-                    </div>
-                </div>
-                <br>
         </div>
         
 
