--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Rubik:ital,wght@0,500;1,600&family=Shadows+Into+Light&family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 	   <link rel="stylesheet" type="text/css" href="CSS/Style.css" />
 
-       <title>krishyojana</title>
+       <title>SwasthyaSetu</title>
 	</head>
 	<body>
 
@@ -41,11 +41,11 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="HTML/Category1.html">Insurance</a>
                             <a class="dropdown-item" href="HTML/Category2.html">Financial Support</a>
-                            <a class="dropdown-item" href="HTML/Category3.html">Crop Field</a>
+                            <!-- <a class="dropdown-item" href="HTML/Category3.html">Crop Field</a> -->
                             <a class="dropdown-item" href="HTML/Category4.html">Sustainable Dev</a>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link pt-3" href="HTML/MSP.html">MSP</a>
                     </li>
                     <li class="nav-item">
@@ -53,7 +53,7 @@
                     </li>
 		    <li class="nav-item">
                             <a class="nav-link pt-3" href="HTML/LoanCalculator.html">Loan-Calc</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <button type="button" class="btn btn-outline-primary mx-1">Log In</button>
                 <button type="button" class="btn btn-outline-secondary mx-1">Register</button>
@@ -70,13 +70,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100 h-40" src="Images/6.jpg" alt="First slide">
+                        <img class="d-block w-100 h-40" src="Images/c1.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="Images/3.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="Images/c2.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="Images/4.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="Images/c3.avif" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#mycarouselExampleIndicators" role="button" data-slide="prev">
@@ -95,21 +95,21 @@
                     <div class="col mb-4">
                         <div class="card">
                             <a href="HTML/Category2.html" >
-                                <img src="Images/Sc.jpg" class="card-img-top" alt="...">
+                                <img src="Images/scheme.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Schemes</h5>
-                                    <p class="card-text">The place for all the Government schemes providing support to the farmers, starting from providing financial aid for building their houses to developing their crop fields for a better living.</p>
+                                    <p class="card-text">ಸರ್ಕಾರಿ ಆರೋಗ್ಯ ಯೋಜನೆಗಳು ಜನಸಾಮಾನ್ಯರಿಗೆ ಉಚಿತ ಅಥವಾ ಕಡಿಮೆ ವೆಚ್ಚದ ವೈದ್ಯಕೀಯ ಸೇವೆ, ಆಸ್ಪತ್ರೆ ಚಿಕಿತ್ಸೆ, ಆರೋಗ್ಯ ವಿಮಾ ರಕ್ಷಣೆ ಮತ್ತು ತುರ್ತು ನೆರವನ್ನು ಒದಗಿಸಿ ಆರೋಗ್ಯಕರ ಜೀವನವನ್ನು ಉತ್ತೇಜಿಸುತ್ತವೆ.</p>
                                 </div>
                             </a>
                         </div>
                     </div>
                     <div class="col mb-4">
                         <div class="card">
-                            <a href="HTML/EMarketing.html" >
-                                <img src="Images/em1.jpg" class="card-img-top" alt="...">
+                            <!-- <a href="HTML/EMarketing.html" > -->
+                                <img src="Images/sw.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Krishi-Kshetra</h5>
-                                    <p class="card-text">Connecting Farmers and Traders: a web platform to let the farmers showcase their surplus products to various vendors and to help them connect with and sell their crops to people outside of their usual market.
+                                    <h5 class="card-title">Swasthya-Kshetra</h5>
+                                    <p class="card-text">ಒಂದು ವೆಬ್ ಪ್ಲಾಟ್‌ಫಾರ್ಮ್, ರೋಗಿಗಳಿಗೆ ತಜ್ಞ ವೈದ್ಯರನ್ನು ಸಂಪರ್ಕಿಸಲು ಮತ್ತು ಚಿಕಿತ್ಸೆ ಪಡೆಯಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ. ಈ ವ್ಯವಸ್ಥೆ ವೈದ್ಯರಿಗೆ ಸೇವೆ ವಿಸ್ತರಿಸಲು ಹಾಗೂ ರೋಗಿಗಳಿಗೆ ತ್ವರಿತ ಆರೋಗ್ಯ ಪರಿರಕ್ಷಣೆ ಒದಗಿಸಲು ಮಾರ್ಗ ಮಾಡುತ್ತದೆ.
                                     </p>
                                 </div>
                             </a>
@@ -117,11 +117,11 @@
                     </div>
                     <div class="col mb-4">
                         <div class="card ">
-                            <a href="HTML/MSP.html" >
-                                <img src="Images/msp1.jpg" class="card-img-top" alt="...">
+                            <!-- <a href="HTML/MSP.html" > -->
+                                <img src="Images/mtp.avif" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">MSP</h5>
-                                    <p class="card-text">MSP is the guaranteed ‘minimum floor price’ that farmer must get from the government in case the market price of the crops falls below the MSP.</p>
+                                    <h5 class="card-title">MTP(Minimum Treatment Price) </h5>
+                                    <p class="card-text">ಸರ್ಕಾರವು ನಿರ್ದಿಷ್ಟ ಚಿಕಿತ್ಸೆಗಳು ಮತ್ತು ಔಷಧಗಳಿಗೆ ಕನಿಷ್ಠ ಬೆಲೆಯನ್ನು ನಿಗದಿಪಡಿಸುವ ಮೂಲಕ, ರೋಗಿಗಳಿಗೆ ಕೈಗೆಟುಕುವ ದರದಲ್ಲಿ ಅಗತ್ಯ ಆರೋಗ್ಯ ಸೇವೆ ಲಭ್ಯವಾಗುವಂತೆ ಮಾಡುತ್ತದೆ.</p>
                                 </div>
                             </a>
                         </div>
