removed some nav pages

--- a/HTML/Category4.html
+++ b/HTML/Category4.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Icon -->
-        <link rel="icon" href="../Images/12.png">
+        <!-- <link rel="icon" href="../Images/12.png"> -->
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -15,14 +15,14 @@
        <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Rubik:ital,wght@0,500;1,600&family=Shadows+Into+Light&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
        <link rel="stylesheet" type="text/css" href="../CSS/Style.css" />
 
-       <title>krishyojana</title>
+       <title>SwasthyaSetu</title>
     </head>
     <body>
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg  sticky-top navbar-custom">
             <span class="navbar-brand">
-                <img src="../Images/14.png" alt="logo">  
+                <!-- <img src="../Images/14.png" alt="logo">   -->
             </span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="nav-burger">
@@ -55,8 +55,8 @@
                             <a class="nav-link pt-3" href="LoanCalculator.html">Loan-Calc</a>
                         </li> -->
                     </ul>
-                <button type="button" class="btn btn-outline-primary mx-1">Log In</button>
-                <button type="button" class="btn btn-outline-secondary mx-1">Register</button>
+                <!-- <button type="button" class="btn btn-outline-primary mx-1">Log In</button>
+                <button type="button" class="btn btn-outline-secondary mx-1">Register</button> -->
                 
             </div>
         </nav>
@@ -105,7 +105,6 @@
             <div class="Logo">
                 <img src="../Logo/new.png" alt="logo">
                 <span class="TeamName">The N-bots</span>
-                <br>
                 <small class="copyright">&copy;Copyright.All rights reserved.</small>
             </div>
         </footer>
