--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg  sticky-top navbar-custom">
 			<span class="navbar-brand">
-                <img src="Images/14.png" alt="logo">  
+                <!-- <img src="Images/14.png" alt="logo">   -->
             </span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="nav-burger">
@@ -55,8 +55,8 @@
                             <a class="nav-link pt-3" href="HTML/LoanCalculator.html">Loan-Calc</a>
                     </li> -->
                 </ul>
-                <button type="button" class="btn btn-outline-primary mx-1">Log In</button>
-                <button type="button" class="btn btn-outline-secondary mx-1">Register</button>
+                <!-- <button type="button" class="btn btn-outline-primary mx-1">Log In</button>
+                <button type="button" class="btn btn-outline-secondary mx-1">Register</button> -->
             </div>
         </nav>
 
